--- a/bataille/bataille.css
+++ b/bataille/bataille.css
@@ -17,11 +17,6 @@ body {
   text-align: center;
 }
 
-/* .contener {
-  display: flex;
-  flex-direction: row;
-} */
-
 h1 {
   color: var(--primary-color);
   margin: 20px 0;
@@ -31,11 +26,10 @@ h2 {
   color: var(--secondary-color);
 }
 
-
 #grid {
   display: grid;
   grid-template-columns: repeat(10, 50px);
-  gap: 5px;
+  gap: 0;
   margin: 20px auto;
   width: fit-content;
   padding: 10px;
@@ -47,7 +41,7 @@ h2 {
 .cell {
   width: 50px;
   height: 50px;
-  background-color: lightgray;
+  background-color: rgb(237, 237, 237);
   border: 2px solid var(--cell-border);
   border-radius: 5px;
   cursor: pointer;
@@ -55,7 +49,7 @@ h2 {
 }
 
 .cell:hover {
-  background-color: #e0e0e0;
+  background-color: #ffffff;
   transform: scale(1.1);
 }
 
@@ -138,4 +132,56 @@ h2 {
   #scoreboard table {
     font-size: 0.9em;
   }
+}
+
+#grid-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row-labels {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
+}
+
+.row-labels span {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.grid-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  position: relative;
+}
+
+.col-labels {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 5px;
+}
+
+.col-labels span {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-weight: bold;
+}
+
+#grid {
+  display: grid;
+  grid-template-columns: repeat(10, 50px);
+  grid-template-rows: repeat(10, 50px);
+  gap: 0;
+  margin: 0;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
