--- a/bataille/bataille.css
+++ b/bataille/bataille.css
@@ -16,7 +16,11 @@ body {
   padding: 0;
   text-align: center;
   background-image: url(fond2.img);
-  background-repeat: repeat;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -82,7 +86,7 @@ h2 {
 
 #results {
   max-height: 250px;
-  margin: 20px auto;
+  margin: 10px auto;
   width: fit-content;
   background: #ffffff9a;
   padding: 15px;
